--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,17 @@
             <version>5.3.2</version>
         </dependency>
 
+        <!-- Notasyonlari kullanabilmek icin junit dependency'sini yukleriz -->
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+
+
+
 
 
 
